# validate_bes_xml

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: misspell.yaml  pre-commit.yaml  pylint.yaml  tag_and_release.yaml  test_build.yaml  test_src.yaml  yamllint.yaml
src/validate_bes_xml/: __init__.py  __main__.py  validate_bes_xml.py
src/validate_bes_xml/schemas/: BESAPI.xsd  BESDomain.xsd  BESOJO.xsd
tests/: test_module.py  tests.py
tests/examples/: example_besapi.xml
tests/examples/bad/: example_bes.bes  example_bes_schema.xml
tests/examples/good/: FixletDebugger.bes  IE11_DashboardTemplate.ojo  minimal_task_grouprel.bes  minimal_wizard.ojo
