[metadata]
name = validate-bes-xml
version = attr: validate_bes_xml.__version__
author = JGStew
author_email = noreply@jgstew.com
description = A python bes xml validator. Validates BigFix BES XML files against the BigFix BES schema.
keywords = bigfix, bes, xml, validator, validation, linter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgstew/validate_bes_xml
project_urls =
    Bug Tracker = https://github.com/jgstew/validate_bes_xml/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    lxml

[options.packages.find]
where = src
